--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,19 +34,19 @@ jobs:
 #          - java: 22-ea
 #            experimental: true        
     steps:
-    - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+    - uses: actions/checkout@v4
       with:
         persist-credentials: false
-    - uses: actions/cache@704facf57e6136b1bc63b828d79edcd491f0ee84 # v3.3.2
+    - uses: actions/cache@v3
       with:
         path: ~/.m2/repository
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
     - name: Set up JDK ${{ matrix.java }}
-      uses: actions/setup-java@0ab4596768b603586c0de567f2430c30f5b0d2b0 # v3.13.0
+      uses: actions/setup-java@v3
       with:
-        distribution: 'temurin'      
+        distribution: 'zulu'      
         java-version: ${{ matrix.java }}
     - name: Build with Maven
       run: mvn --show-version --batch-mode --no-transfer-progress -Ddoclint=all
